--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.5",
     "chart.js": "^4.4.0",
+    "chartjs-adapter-moment": "^1.0.1",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "next": "14.0.3",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18"
+    "react-day-picker": "^8.9.1",
+    "react-dom": "^18",
+    "react-select": "^5.8.0"
   },
   "proxy": "http://localhost:5000",
   "devDependencies": {
